dexam-be-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dexam-be-dev
  namespace: dexam-be-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dexam-be-dev

  template:
    metadata:
      labels:
        app: dexam-be-dev

    spec:
      containers:
        - name: dexam-be-dev
          image: sungjujjang/dexam-be-dev:20260810-152911

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dexam-be-dev-service
  namespace: dexam-be-dev

spec:
  selector:
    app: dexam-be-dev

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
