dexam-be-dev/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-dexam-be-dev
  namespace: dexam-be-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-dexam-be-dev

  template:
    metadata:
      labels:
        app: mysql-dexam-be-dev

    spec:
      containers:
        - name: mysql
          image: mysql:8.4

          ports:
            - containerPort: 3306

          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-dexam-be-dev-storage

      volumes:
        - name: mysql-dexam-be-dev-storage
          persistentVolumeClaim:
            claimName: mysql-dexam-be-dev-data
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-dexam-be-dev
  namespace: mysql-dexam-be-dev

spec:
  selector:
    app: mysql-dexam-be-dev

  ports:
    - port: 3306
      targetPort: 3306
