dexam-be-dev/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dexam-be-dev
  namespace: dexam-be-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-dexam-be-dev
  template:
    metadata:
      labels:
        app: redis-dexam-be-dev
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379

          command:
            - /bin/sh
            - -c
            - exec redis-server --requirepass "$REDIS_PASSWORD"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-dexam-be-dev
  namespace: dexam-be-dev
spec:
  selector:
    app: redis-dexam-be-dev
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
